--- a/license_generator_form/templates/home.html
+++ b/license_generator_form/templates/home.html
@@ -5,28 +5,31 @@
     <!-- Begin content page -->
     <div class="container">        
         <br>
-        <div class="row">
-            <div class="col-md-12 col-xs-12">
-                <div role="tabpanel">
-                    <ul id="myTab" class="nav nav-tabs" role="tablist">
-                        <li role="presentation" class="active">
-                            <a href="#alfresco_tab" aria-controls="alfresco_tab" data-toggle="tab" role="tab" >Alfresco License Generator</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#activiti_tab" aria-controls="activiti_tab" data-toggle="tab" role="tab" >Activiti License Generator</a>
-                        </li>
-                    </ul>
-                    <div id="myTabContent" class="tab-content">
-                        <div role="tabpanel" class="tab-pane fade in active" id="alfresco_tab"> 
-                            {% include "alfresco_form.html" %}                                                             
-                        </div>
+        <div class="row">            
+                <div class="col-md-12 col-xs-12">                    
 
-                        <div role="tabpanel" class="tab-pane fade" id="activiti_tab">
-                            {% include "activiti_form.html" %}                                 
+                    {% include "alert_messages.html" %}
+
+                    <div role="tabpanel">
+                        <ul id="myTab" class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class={% if tab_selected != "activiti" %}"active"{% endif %}>
+                                <a href="#alfresco_tab" aria-controls="alfresco_tab" data-toggle="tab" role="tab" >Alfresco License Generator</a>
+                            </li>
+                            <li role="presentation" class={% if tab_selected == "activiti" %}"active"{% endif %}>
+                                <a href="#activiti_tab" aria-controls="activiti_tab" data-toggle="tab" role="tab" >Activiti License Generator</a>
+                            </li>
+                        </ul>
+                        <div id="myTabContent" class="tab-content">
+                            <div role="tabpanel" class="tab-pane fade {% if tab_selected != "activiti" %}in active{% endif %}" id="alfresco_tab"> 
+                                {% include "alfresco_form.html" %}                                                             
+                            </div>
+
+                            <div role="tabpanel" class="tab-pane fade {% if tab_selected == "activiti" %}in active{% endif %}" id="activiti_tab">
+                                {% include "activiti_form.html" %}                                 
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 
@@ -38,6 +41,18 @@
         $("#myTab li a").click(function() {
             var text = $( this ).text();                
             $(".navbar-brand #interactive-title").text(text);
+
+            /* We will check if there is any alert message and if so, we should either 
+                hide it or show it.*/
+            if($(".alert")[0].outerHTML.search("activiti") > -1 && $(":focus").text() == "Activiti License Generator" ||
+                $(".alert")[0].outerHTML.search("alfresco") > -1 && $(":focus").text() == "Alfresco License Generator" )
+            {                
+                $(".alert").show();                                
+            }
+            else 
+            {                      
+                $(".alert").hide();
+            }
         });  
         
         $(".date").datepicker({ 
@@ -49,6 +64,6 @@
         $(".navbar-brand").click(function() {
             event.preventDefault();
             $('html, body').animate({ scrollTop: 0 }, 'slow');
-        });              
+        });       
     </script> 
 {% endblock %}
